--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation gradleApi()
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
-    implementation 'org.pegdown:pegdown:1.6.0'
+    implementation 'commons-codec:commons-codec:1.16.0'
+    implementation 'org.bsc.maven:confluence-markdown-processor-commonmark:7.13'
 }
 
 gradlePlugin {
